hphp/test/quick/reserved_class1.php.expectf
HipHop Fatal error: Cannot use 'bool' as class name as it is reserved in %s on line 2
